migration for ropsten

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "react-scripts": "1.0.17",
     "react-web3": "^0.4.5",
     "truffle-contract": "^3.0.5",
-    "truffle-hdwallet-provider": "0.0.5",
     "web3": "^0.20.6",
     "zeppelin-solidity": "1.6.0"
+  },
+  "devDependencies": {
+    "truffle-hdwallet-provider": "0.0.5"
   }
 }
